crates/bonsaidb-macros/tests/ui/collection/invalid_attribute.stderr
error: expected identifier
 --> tests/ui/collection/invalid_attribute.rs:4:48
  |
4 | #[collection(name = "hi", authority = "hello", "hi")]
  |                                                ^^^^

error: Only `authority = \"some-authority\"`, `name = \"some-name\"`, `views = [SomeView, AnotherView]`, `serialization = SerializationFormat` and `core = bonsaidb::core` are supported attributes
 --> tests/ui/collection/invalid_attribute.rs:8:48
  |
8 | #[collection(name = "hi", authority = "hello", field = 200)]
  |                                                ^^^^^
